DevOps-SRE-Interview-Preparation/05-Kubernetes/Projects/production-ready-web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interview-k8s
  labels:
    app.kubernetes.io/part-of: kubernetes-interview-preparation
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
