DevOps-SRE-Interview-Preparation/05-Kubernetes/Projects/production-ready-web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-web
  namespace: interview-k8s
  labels:
    app.kubernetes.io/name: health-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: health-web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
